--- a/index.html
+++ b/index.html
@@ -60,9 +60,6 @@
       </div>
     </section>
 
-
-    
-
     <!-- TEMPLATE -->
     <template id="todoTemplate">
       <li>
@@ -81,7 +78,6 @@
       </li>
     </template>
 
-    <script src="./main.js"></script>
-    <script src="./searchTodo.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
